# perdiz

./: .gitignore  LICENSE  README.md  pyproject.toml
src/perdiz/: .__init__.py.swp  .core.py.swo  .core.py.swp  .main.py.swp  .newServer.py.swp  __init__.py  app.py  applications.py  core.py  newServer.py  response.py  room.py  socketClient.py  webSocketRouter.py
src/perdiz.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
